리스너 등록 테스트 성공

--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_height="50dp" />
 
         <Button
-            android:id="@+id/gray"
+            android:id="@+id/green"
             android:layout_width="50dp"
             android:layout_height="50dp" />
 
